# cli

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
.unfault/cache/semantics/: 175fac4958b90c04_59c29c689576ced8_src_session_graph_builder.rs.msgpack  29c7166e9a0c1ca7_51d0626d4e42923a_src_session_file_collector.rs.msgpack  322e8ecdd91e24cb_fbb9a64e965dbcff_src_commands_login.rs.msgpack  3ab5b4cd93b6003c_e14b48b810d1764c_src_exit_codes.rs.msgpack  4339bf6c8a77dba1_74dbc84d60a77ba1_src_commands_graph.rs.msgpack  45e56af37cef613a_ead21e578994832f_src_session_mod.rs.msgpack  46d0ef24168175e8_12779ff4cf115754_src_session_workspace.rs.msgpack  48e9d3c364f43f61_895ed14b85c7a7a4_src_errors.rs.msgpack  55947d7a6f475862_c128e8d0fccf61f7_src_api_client.rs.msgpack  63b2a9dfb5694ee7_a2b346fc8562861d_src_commands_lsp.rs.msgpack  6854ef249db0c5a5_9fa79fd0e2594a09_src_api_session.rs.msgpack  783472a4c1288e1c_945c4a488ae12b60_src_commands_mod.rs.msgpack  78c258a922255ef8_b0dbdf202b2ce879_src_commands_ask.rs.msgpack  7b7e49bf38c17550_f62203cd363729a8_src_session_workspace_id.rs.msgpack  7c372d5cf06dff48_dd52bfdf0e83b4e6_src_commands_status.rs.msgpack  7eba0f760fea04d9_9346456f4e4a3ad6_src_session_semantics_cache.rs.msgpack  89b8fbae0f6658f6_458e1446cca873d5_src_config.rs.msgpack  8aaabb201b7a1b85_ae0065a00179fcec_src_lib.rs.msgpack  9b45d0c4ebfbf90a_d81efc7812f8925b_src_api_graph.rs.msgpack  aa2b9e9f8155be18_1fcf3f413f9f0300_src_api_rag.rs.msgpack  b0421103b41d7fe7_62decdf8178e13a8_src_session_patch_applier.rs.msgpack  b64ab17e3b301f56_f18246137a8ee49b_src_api_auth.rs.msgpack  b9142e6f6f9c7206_b245543f1d77c1b1_src_main.rs.msgpack  bab7032706aec55c_17e262d4f20f72b8_src_api_llm.rs.msgpack  bec92ef638e662dd_a5dc85ab656dc381_src_commands_review.rs.msgpack  c5683617b1f55099_a48226edd22a452b_src_commands_config.rs.msgpack  d2a9a122df2475b4_a2857188ac59981c_src_session_header_extractor.rs.msgpack  d86a0a9a0c1dac36_9d19235b411bd195_src_session_workspace_settings.rs.msgpack  dea33df4d7010a5c_14f4c9eb28814706_src_api_mod.rs.msgpack  e02d6d3ec48c1951_a5ffa83b5ec55bfe_src_session_runner.rs.msgpack  eb402806a2eab052_147433389efca6d2_src_session_ir_builder.rs.msgpack  meta.json
src/: config.rs  errors.rs  exit_codes.rs  fault_scenarios.rs  lib.rs  main.rs
src/api/: auth.rs  client.rs  graph.rs  graph_stream.rs  llm.rs  mod.rs  rag.rs  semantics_stream.rs  session.rs
src/commands/: addon.rs  ask.rs  config.rs  fault_plan.rs  fault_plan_cmd.rs  fault_scenarios.rs  fault_scenarios_cmd.rs  graph.rs  login.rs  lsp.rs  mod.rs  review.rs  status.rs
src/session/: file_collector.rs  graph_builder.rs  header_extractor.rs  ir_builder.rs  mod.rs  patch_applier.rs  runner.rs  semantics_cache.rs  workspace.rs  workspace_id.rs  workspace_settings.rs
src/slo/: datadog.rs  dynatrace.rs  gcp.rs  matcher.rs  mod.rs  types.rs
