[package]
name = "unfault"
version = "0.6.3"
edition = "2024"
authors = ["Sylvain Hellegouarch <sylvain@unfault.dev>"]
description = "Unfault — a calm reviewer for thoughtful engineers"
repository = "https://github.com/unfault/cli"
homepage = "https://unfault.dev"
documentation = "https://docs.rs/unfault"
license = "MIT"
keywords = ["cli", "fault-tolerance", "observability", "devops", "monitoring"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
colored = "3"
env_logger = "0.11"
futures-util = "0.3"
glob = "0.3"
hex = "0.4"
ignore = "0.4"
indicatif = "0.17"
log = "0.4"
rayon = "1.10"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
zstd = "0.13"
petgraph = "0.8"
async-trait = "0.1"
tower-lsp = "0.20"
dashmap = "6"
scc = "3.4.8"
sha2 = "0.10"
rmp-serde = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
termimad = "0.31.3"
textwrap = "0.16"
thiserror = "2"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "io-std", "fs"] }
urlencoding = "2"
uuid = { version = "1", features = ["v4", "serde"] }

# Local parsing and graph building
#
# CI/builds should use the published crate. For local development against a
# sibling checkout, you can uncomment the `[patch.crates-io]` section below.
unfault-core = "0.1.4"

# For local development against a sibling checkout, you can uncomment:
#
[patch.crates-io]
unfault-core = { path = "../core" }

[dev-dependencies]
tempfile = "3.8"
mockall = "0.12"
serial_test = "3.0"
